[gd_scene load_steps=11 format=2]

[ext_resource path="res://EffectLibrary/ParticleEffects/Stink.tscn" type="PackedScene" id=1]
[ext_resource path="res://EffectLibrary/ParticleEffects/Contamination.tscn" type="PackedScene" id=2]
[ext_resource path="res://EffectLibrary/ParticleEffects/EffectLibrary.tscn" type="PackedScene" id=4]
[ext_resource path="res://EffectLibrary/ParticleEffects/Ice.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utility/DroppableZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://EffectLibrary/ParticleEffects/Fire.tscn" type="PackedScene" id=7]
[ext_resource path="res://Rooms/Slots/Slot.gd" type="Script" id=8]
[ext_resource path="res://RandomSprites/furniture_armchair_blue_modern_box_chair.png" type="Texture" id=9]
[ext_resource path="res://RandomSprites/ChairLightCookie.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 90 )

[node name="Slot" type="Area2D"]
script = ExtResource( 8 )

[node name="furniture_armchair_blue_modern_box_chair" type="Sprite" parent="."]
visible = false
position = Vector2( -3.05176e-05, 3.05176e-05 )
scale = Vector2( 0.23713, 0.23713 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.831373, 1, 0.0156863, 1 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 10 )
texture_scale = 0.8

[node name="DroppableZone" parent="." instance=ExtResource( 6 )]
acceptedDrops = [ "Character" ]

[node name="EffectLibrary" parent="." instance=ExtResource( 4 )]
effectLibary = {
"contamination": ExtResource( 2 ),
"fire": ExtResource( 7 ),
"ice": ExtResource( 5 ),
"stink": ExtResource( 1 )
}
[connection signal="area_entered" from="." to="." method="_on_Slot_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Slot_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
